@@ -14438,6 +14438,11 @@ operator|.
 name|start
 argument_list|()
 expr_stmt|;
+name|putThread
+operator|.
+name|waitForFirstPut
+argument_list|()
+expr_stmt|;
 name|FlushThread
 name|flushThread
 init|=
@@ -14699,6 +14704,13 @@ name|boolean
 name|done
 decl_stmt|;
 specifier|private
+specifier|volatile
+name|int
+name|numPutsFinished
+init|=
+literal|0
+decl_stmt|;
+specifier|private
 name|Throwable
 name|error
 init|=
@@ -14756,6 +14768,34 @@ operator|=
 name|qualifiers
 expr_stmt|;
 block|}
+comment|/**      * Block until this thread has put at least one row.      */
+specifier|public
+name|void
+name|waitForFirstPut
+parameter_list|()
+throws|throws
+name|InterruptedException
+block|{
+comment|// wait until put thread actually puts some data
+while|while
+condition|(
+name|numPutsFinished
+operator|==
+literal|0
+condition|)
+block|{
+name|checkNoError
+argument_list|()
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|50
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 specifier|public
 name|void
 name|done
@@ -14805,11 +14845,6 @@ name|done
 operator|=
 literal|false
 expr_stmt|;
-name|int
-name|val
-init|=
-literal|0
-decl_stmt|;
 while|while
 condition|(
 operator|!
@@ -14884,13 +14919,13 @@ argument_list|,
 operator|(
 name|long
 operator|)
-name|val
+name|numPutsFinished
 argument_list|,
 name|Bytes
 operator|.
 name|toBytes
 argument_list|(
-name|val
+name|numPutsFinished
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -14904,13 +14939,16 @@ argument_list|(
 name|put
 argument_list|)
 expr_stmt|;
+name|numPutsFinished
+operator|++
+expr_stmt|;
 if|if
 condition|(
-name|val
+name|numPutsFinished
 operator|>
 literal|0
 operator|&&
-name|val
+name|numPutsFinished
 operator|%
 literal|47
 operator|==
@@ -14925,7 +14963,7 @@ name|println
 argument_list|(
 literal|"put iteration = "
 operator|+
-name|val
+name|numPutsFinished
 argument_list|)
 expr_stmt|;
 name|Delete
@@ -14939,7 +14977,7 @@ argument_list|,
 operator|(
 name|long
 operator|)
-name|val
+name|numPutsFinished
 operator|-
 literal|30
 argument_list|,
@@ -14958,7 +14996,7 @@ literal|true
 argument_list|)
 expr_stmt|;
 block|}
-name|val
+name|numPutsFinished
 operator|++
 expr_stmt|;
 block|}
@@ -15154,6 +15192,11 @@ decl_stmt|;
 name|putThread
 operator|.
 name|start
+argument_list|()
+expr_stmt|;
+name|putThread
+operator|.
+name|waitForFirstPut
 argument_list|()
 expr_stmt|;
 name|FlushThread
